// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddItemScreen render addItem screen Renders addItem screen before service call with manual scan 1`] = `
<KeyboardAvoidingView
  behavior="height"
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <ManualScanComponent
      keyboardType="numeric"
      placeholder="[missing \\"en.GENERICS.ENTER_UPC_ITEM_NBR\\" translation]"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#000000"
        name="barcode-scan"
        size={100}
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <Text>
          [missing "en.PALLET.SCAN_INSTRUCTIONS" translation]
        </Text>
      </View>
    </View>
  </View>
</KeyboardAvoidingView>
`;

exports[`AddItemScreen render addItem screen Renders addItem screen before service call without manual scan 1`] = `
<KeyboardAvoidingView
  behavior="height"
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#000000"
        name="barcode-scan"
        size={100}
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <Text>
          [missing "en.PALLET.SCAN_INSTRUCTIONS" translation]
        </Text>
      </View>
    </View>
  </View>
</KeyboardAvoidingView>
`;

exports[`AddItemScreen render addItem screen Renders addItem screen when waiting for service call 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`AddItemScreen render addItem screen render screen with navigation and state 1`] = `
<View
  onLayout={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#000000"
        name="barcode-scan"
        size={100}
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <Text>
          [missing "en.PALLET.SCAN_INSTRUCTIONS" translation]
        </Text>
      </View>
    </View>
  </View>
</View>
`;
